<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.movieratingapp.PosterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/advanced_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/poster_search_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="6dp"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:hint="@string/search_hint"/>
                <ImageView
                    android:layout_margin="6dp"
                    android:id="@+id/poster_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search_white_24dp"/>
            </LinearLayout>
            <RadioGroup
                android:id="@+id/poster_sort_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">
                <RadioButton
                    android:id="@+id/poster_sort_by_popularity"
                    android:text="@string/popularity"
                    android:checked="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/poster_sort_by_newest"
                    android:text="@string/newest"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/poster_sort_by_rating"
                    android:text="@string/highest_rating"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondary">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textColor="@android:color/white"
                android:text="Advanced Search"/>
            <ImageView
                android:id="@+id/collapse_searchview_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:src="@drawable/ic_expand_less_white_24dp"/>
            <ImageView
                android:id="@+id/expand_searchview_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_expand_more_white_24dp"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/empty_view_text"/>

    <GridView
        android:background="@color/colorPrimary"
        android:id="@+id/grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:gravity="center"/>

</LinearLayout>