<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--Overview-->
    <!--Title / Title tag / Genre-->
    <LinearLayout
        android:background="@color/colorSecondaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/movie_title"/>
        <TextView
            android:id="@+id/movie_title_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/movie_tagline"/>
        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/movie_genre"/>
    </LinearLayout>
    <!--Body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Upper of Body: Poster Photo and Dates and Rating-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"/>
                <!--Dates and Rating-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/color99Transparent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@android:color/white"
                        android:textStyle="italic"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/released_on" />
                    <TextView
                        android:id="@+id/released_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/movie_released_date"/>
                    <!--Rating-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/white"
                        android:textStyle="italic"
                        android:text="@string/rating" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_star_rate_white_18dp"/>
                        <TextView
                            android:id="@+id/movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/movie_rating"/>
                    </LinearLayout>

                    <!--Add To Favorite-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/white"
                        android:textStyle="italic"
                        android:text="@string/favorite" />
                    <ImageView
                        android:id="@+id/movie_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_favorite_border_white_24dp" />
                </LinearLayout>
            </LinearLayout>

            <!--Lower of the Body: Synopsis-->
            <LinearLayout
                android:background="@color/color99Transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="italic"
                    android:textSize="16dp"
                    android:textColor="@android:color/white"
                    android:text="@string/synopsis"/>
                <TextView
                    android:id="@+id/movie_synopsis"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:fontFamily="sans-serif-light"
                    style="@style/movie_synopsis"/>
            </LinearLayout>

            <!--Cast-->
            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Cast"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/cast_horizontal_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@android:color/white"/>

            <!--Image Gallery-->
            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Image Gallery"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/gallery_horizontal_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@android:color/white"/>

            <!--Video-->
            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Videos"/>
            <ListView
                android:id="@+id/video_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@android:color/white"/>

            <!--Similar Movies-->
            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Similar Movies"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/similar_horizontal_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@android:color/white"/>

            <!--Reviews-->
            <TextView
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="Reviews"/>
            <ListView
                android:id="@+id/review_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@android:color/white"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>